nome da lista dentro de jumbotron
ao que parece top é palavra reservada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    
+
      <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
    
@@ -19,9 +19,10 @@
 <body>
     <div id="pagepiling" style="overflow: hidden; touch-action: none;">
     <div class="imagem section" id="primeiro">       
-            
-        <p class="name" id="nomeLista">Lista X</p>
-        <p id="tretaGrande">Navegar além</p>         
+        <div class="container jumbotron" style="background: rgba(200, 200, 200, 0.6);">
+        <h1 class="name" id="nomeLista">Lista X</h1>
+        <p id="tretaGrande">Navegar além</p>
+        </div>       
         <div class=" ">
             <div class="row centerv">
               <div class="col-md-4">
