--- a/index.html
+++ b/index.html
@@ -20,24 +20,19 @@
     <div id="pagepiling" style="overflow: hidden; touch-action: none;">
     <div class="imagem section" id="primeiro">       
         <div class="container jumbotron" style="background: rgba(200, 200, 200, 0.6);">
-        <h1 class="name" id="nomeLista">Lista X</h1>
-        <p id="tretaGrande">Navegar além</p>
+        <h1 class="name" style="text-align:center;" id="nomeLista">Lista X</h1>
+        <p id="tretaGrande" style="text-align:center;">Navegar além</p>
         </div>       
         <div class=" ">
-            <div class="row centerv">
-              <div class="col-md-4">
-                <a href="https://fb.com/"><img class="icon" src="images/github.svg" alt="GitHub"></a></div>
-              <div class="col-md-4">
-                <a href="https://www.linkedin.com/in/"><img class="icon" src="images/linkedin.svg" alt="LinkedIn"></a></div>
-            </div>
+              <p style="text-align:center;">
+            <a href="https://www.facebook.com/navegarmovimento/"><img class="icon" style="width: 30px;height: 30px;display: inline-block;margin-right: auto;margin-left: auto;" src="F_icon.svg" alt="Like us on Facebook"></a>
+        </p>
 
-            <div class="chevron"> <a href="#info"><img src="images/down.svg" alt="down for info" class="icon"></a></div>
-        
         </div>
   
     </div>
 
-    <div class="info container section">         
+    <div class="info section" id="segundo">         
         <p class="" id="tretaLonga">bla bla bla</p>
         <div class="chevron"> <a href="#imagem"><img src="images/up.svg" alt="up for home" class="icon"></a></div>
     </div>
