--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script type="text/javascript" src="jquery.pagepiling.min.js"></script>
     <script type="text/javascript" src="inde.js"></script>
     <link rel="stylesheet" type="text/css" href="jquery.pagepiling.css" />
