mudar background color da segunda parte

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
   
     </div>
 
-    <div class="info section" id="segundo">         
-        <p class="" id="tretaLonga">bla bla bla</p>
-        <div class="chevron"> <a href="#imagem"><img src="images/up.svg" alt="up for home" class="icon"></a></div>
+    <div class="info section" id="segundo">
+        <div class="container jumbotron">       
+            <p class="" id="tretaLonga">bla bla bla</p>
+        </div>
     </div>
 
 </div>
